--- a/CloudStorageNetty/cloud-storage-server/pom.xml
+++ b/CloudStorageNetty/cloud-storage-server/pom.xml
@@ -23,7 +23,7 @@
                 <artifactId>maven-assembly-plugin</artifactId>
                 <version>3.3.0</version>
                 <configuration>
-                    <finalName>cloud-storage</finalName>
+                    <finalName>cloud-storage-server</finalName>
                     <appendAssemblyId>false</appendAssemblyId>
                     <archive>
                         <manifest>
